tests/js_error/source_locations/expression/assign_op/bit_and.exp
TypeError: BigInt cannot be converted to number
  ┌ source_locations/expression/assign_op/bit_and.js:2:3
  |
2 | x &= 2n;
  |   ^
Stack trace:
  at <global> (source_locations/expression/assign_op/bit_and.js:2:3)